# T-DEV-700-project-COT_5

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  pytest.ini
backend/attendance/: admin.py  constants.py  models.py  permissions.py  serializers.py  tasks.py  urls.py
backend/attendance/migrations/: 0001_initial.py  0002_initial.py  0003_rename_arrival_attendance_check_in_and_more.py  0004_attendance_excuse_reason_attendance_is_excused.py
backend/attendance/tests/: test_celery_tasks.py  test_clocks.py
backend/attendance/utils/: base.py  kpi_helpers.py
backend/attendance/views/: __init__.py  base.py  kpis.py
backend/core/: local_settings_template.py  settings.py  urls.py
backend/teams/: models.py  permissions.py  serializers.py  views.py
backend/teams/migrations/: 0001_initial.py  0002_initial.py
backend/templates/emails/: otp_email.html  otp_email.txt
backend/users/: admin.py  constants.py  emails.py  models.py  permissions.py  urls.py  utils.py
backend/users/fixtures/: groups.json
backend/users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_credential_and_more.py  0003_loginotp.py  0004_alter_user_is_active.py
backend/users/serializers/: __init__.py  base.py  login.py  register.py
backend/users/tests/: __init__.py  base.py  test_create.py  test_list.py  test_others_views.py  test_register.py  test_update.py
backend/users/views/: __init__.py  base.py  login.py  register.py
(+158 files in other folders)
